--- a/economicdataanalysis/analysiswithfredandpandas.ipynb
+++ b/economicdataanalysis/analysiswithfredandpandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,10 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "\n",
-    "plt.style.use('fivethirtyeight')\n"
+    "plt.style.use('fivethirtyeight')\n",
+    "color_pal = plt.rcParams[\"axes.prop_cycle\"].by_key()[\"color\"]\n",
+    "\n",
+    "from fredapi import Fred\n"
    ]
   },
   {
