Organized headers for easier navigation

--- a/pythonstatistics.ipynb
+++ b/pythonstatistics.ipynb
@@ -65,11 +65,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -194,10 +189,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
-    "RandomArray2 has more even distibution becaus it has 1,000,000 samples. This makes the results more consistent. "
+    "# RandomArray2 has more even distibution becaus it has 1,000,000 samples. This makes the results more consistent. "
    ]
   },
   {
